--- a/README
+++ b/README
@@ -2,3 +2,9 @@ Simple C++ retained mode library for verse.
 
 I know that the internals aren't very OO yet. I wanted to let the API settle before I did that.
 
+Before you complain about implementation details, remember that I'm aiming for API completeness first. Please do complain, however.
+
+Also, I know that the code isn't even slightly optimised. It will be, after  the design has settled.
+
+Note that the geometry node only supports 64-bit real layers for now.
+
